src/objects/User_Branch_Info__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>User Branch Info</relationshipLabel>
        <relationshipName>User_Branch_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Branch_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Branch Info</label>
    <nameField>
        <label>User Branch Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Branch Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>